<resources>
    <string name="app_name">Project 3</string>
    <string name="Login">Log In</string>
    <string name="createaccount">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="validation_fail">login error</string>
    <string name="user_create_fail">username already taken; pick another</string>
    <string name="user_create_success">user created successfully! please log in</string>
    <string name="validation_fail_user_or_pass">incorrect user/password combination</string>
    <string name="here">I WAS HERE</string>
    <string name="map_content_desc">a view of the map with possible locations users have been</string>
    <string name="dummy">Dummy String</string>
    <string name="check_fail">You\'re not within range of any spots!</string>
    <string name="comment_fail">Couldn\'t retrieve any comments from this location!</string>
    <string name="show_password">Show Password</string>
    <string name="location_fail">Failed to Load Locations</string>
    <string name="comment_title">Post a Comment From Your Location!</string>
    <string name="comment_post">POST</string>
    <string name="create_comment_fail">Failed to Create Comment</string>
    <string name="comment_creation_success">Comment Posted!</string>
    <string name="bookmark">Bookmark This Location</string>
</resources>